--- a/getmethere/package.json
+++ b/getmethere/package.json
@@ -2,7 +2,7 @@
   "name": "getmethere",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://edisonzsq.github.io/deploy-test",    
+  "homepage": "https://ErathiaChia.github.io/Project_2",    
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
